# blog

./: blog.db
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  posts.py
backend/app/db/: database.py
backend/app/models/: __init__.py  post.py
backend/app/schemas/: post.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: CreatePost.jsx  Header.jsx  PostDetail.jsx  PostList.jsx
