[project]
name = "blog-backend"
version = "0.1.0"
description = "FastAPI backend for personal blog"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "alembic",
    "pydantic",
    "python-dotenv",
    "python-jose",
    "python-multipart",
    "markdown"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
